--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -38,10 +38,40 @@ body
 b, strong
 	font-weight: bold
 
-.qqq
-	color: red
-
-.www
-	color: green
+// Example styles Start
+.example-bs
+	padding: $grid-gutter-width/2
+	min-height: 100vh
+	h3
+		margin-bottom: 20px
+	.row
+		text-align: center
+		> .col, > [class^=col-]
+			padding:
+				top: .75rem
+				bottom: .75rem
+			background-color: $dark
+			border: 1px solid darken($dark, 10%)
+			color: #fff
+	[class^="row align-items-"], &.example-flex .row+.row
+		min-height: 10rem
+		background-color: #a3a8ba
+		margin: $grid-gutter-width/2 0
+	.no-gutters
+		> .col, > [class^=col-]
+			border: none
+			background-color: transparent
+			padding:
+				top: 0
+				bottom: 0
+			div
+				background-color: $dark
+				padding:
+					top: .75rem
+					bottom: .75rem
+			&:nth-child(odd)
+				div
+					background-color: lighten($dark, 10%)
+// Example styles End
 
 @import "media" // Always at the end
